# quant_trading

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  custom_instructions  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.nicegui/: storage-user-2cce0e00-e27e-4c00-82bf-7c835a92178b.json
Kiwoom_app/: kiwoom.py  requirements.txt
Kiwoon_app/: config.py  main.py  pytrader.py
archive/Kiwoom_app/: README.md  auto_update.py
archive/jupyter_config/: jupyter_notebook_config.json  requirements.txt
docker/: Dockerfile.dev
jupyter_config/: configure_environment.sh
notebooks/: build_kor_value.ipynb  data_for_kospi.ipynb  factors-smallb-pbr-gpa.ipynb
requirements/: dev.txt  prod.txt  staging.txt
scripts/: export_requirements.py
src/: __init__.py  main.py
src/api/: deps.py
src/api/endpoints/: auth.py
src/api/v1/: api.py
src/api/v1/endpoints/: auth.py  health.py
src/cli/: __init__.py
src/cli/commands/: __init__.py  users.py
src/core/: config.py  middleware.py  security.py
src/db/: base_class.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2a1092c29178_merge_heads.py  333f3457a65d_add_price_table.py  401a0f1d9993_create_stocks_table.py  85fb776297d3_create_users_table.py  9becef9870c3_init_user_stocks_tables.py  add_market_field_to_stocks.py  add_stock_columns.py  cc3aa3555aea_.py  change_price_table_structure.py  change_stock_id_to_uuid.py  de8849e4c337_create_stocks_table.py
src/db/repositories/: price.py  stock.py  user.py
src/models/: __init__.py  base.py  price.py  stock.py  user.py
src/pages/: login.py  main.py  register.py  stock.py  stocks.py  test.py
src/schemas/: stock.py  user.py
src/services/: stock_service.py
src/ui/: __init__.py  login.py  register.py  stock.py  stocks.py  test.py  utils.py
