[tool.poetry]
name = "quant-trading"
version = "0.1.0"
description = "Quantitative Trading System with NiceGUI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.11.*"
nicegui = "^1.4.21"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.109.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"

[tool.poetry.group.staging.dependencies]
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[tool.poetry.scripts]
export-requirements = "scripts.export_requirements:main"
post-install = "scripts.export_requirements:post_install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 