[tool.poetry]
name = "quant-trading"
version = "0.1.0"
description = "Quantitative Trading System with PostgreSQL"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = ">=1.4.21"
fastapi = ">=0.109.2"
uvicorn = {extras = ["standard"], version = ">=0.27.1"}
python-dotenv = ">=1.0.1"
sqlalchemy = ">=2.0.27"
psycopg2-binary = ">=2.9.9"
pydantic = {extras = ["email"], version = ">=2.11.4"}
pydantic-settings = ">=2.1.0"
alembic = ">=1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"  # for form data parsing
email-validator = "^2.1.0.post1"  # for email validation
httpx = "^0.27.0"
bcrypt = "4.0.1"
yfinance = "^0.2.59"
pandas = "^2.2.3"
finance-datareader = "^0.9.96"

[tool.poetry.group.dev.dependencies]
black = ">=24.1.1"
isort = ">=5.13.2"
flake8 = ">=7.0.0"
mypy = ">=1.8.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.poetry.scripts]
export-requirements = "scripts.export_requirements:main"
post-install = "scripts.export_requirements:post_install"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto" 